# rso

./: .gitignore  README.md  docker-compose.backend.yml  docker-compose.dev.yml  docker-compose.yml  nginx.conf  nginx_dev.conf
rso_backend/: .gitignore  Dockerfile  _db.sqlite3  _db.sqlite3.bak  data.sqlite3  data_base.sqlite3  db.sqlite3  dbb.sqlite3  dev_db.sqlite3  devdb.sqlite3  manage.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
rso_backend/api/: constants.py  email.py  filters.py  mixins.py  permissions.py  serializers.py  swagger_schemas.py  tasks.py  urls.py  utils.py  views.py  views.py.orig
rso_backend/competitions/: admin.py  constants.py  filters.py  forms.py  models.py  q_calculations.py  serializers.py  signal_handlers.py  swagger_schemas.py  tasks.py  urls.py  utils.py  views.py
rso_backend/events/: admin.py  apps.py  constants.py  filters.py  forms.py  models.py  serializers.py  signal_handlers.py  swagger_schemas.py  urls.py  utils.py  views.py
rso_backend/headquarters/: admin.py  apps.py  constants.py  filters.py  forms.py  models.py  registry_serializers.py  resources.py  serializers.py  signal_handlers.py  swagger_schemas.py  urls.py  utils.py  views.py
rso_backend/questions/: admin.py  models.py  serializers.py  swagger_schemas.py  views.py
rso_backend/rso_backend/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
rso_backend/tests/: conftest.py  tests_models.py  tests_users_models.py
rso_backend/users/: admin.py  apps.py  constants.py  filters.py  forms.py  models.py  resources.py  serializers.py  short_serializers.py  (+5 more)
(+234 files in other folders)
