[tool.poetry]
name = "rso-backend"
version = "0.1.0"
description = "Backend for RSO"
authors = ["David Saidov <delightxxls@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2.7"
psycopg2-binary = "^2.9.9"
djangorestframework = "^3.14.0"
python-dotenv = "^1.0.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
pillow = "^10.1.0"
drf-yasg = "^1.21.7"
djoser = "^2.2.2"
gunicorn = "^21.2.0"
django-cors-headers = "^4.3.1"
django-filter = "^23.5"
setuptools = "^69.0.2"
django-redis = "^5.4.0"
celery = "^5.3.6"
django-celery-beat = "^2.5.0"
python-json-logger = "^2.0.7"
django-import-export = "^3.3.4"
pdfrw = "^0.4"
reportlab = "^4.0.8"
eventlet = "^0.34.3"
coverage = "^7.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
